feat: add wishlist

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
   margin-left: 16rem;
 }
 
-.product-screen {
+.display-screen {
   margin: 4.25rem 0 3.25rem 0;
   display: flex;
   justify-content: center;
