--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,9 @@
   flex-wrap: wrap;
   gap: var(--sm-size);
 }
+
+/* cart */
+.custom-width {
+  width: var(--xl-size);
+  height: var(--xl-size);
+}
