--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body {
   height: var(--xl-size);
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 54em) {
   html {
     font-size: 35%;
   }
